# PyTASER

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  README.md  TAS.py  generator.py  plotter.py  pyproject.toml  requirements.txt  setup.py  tas.py
.github/workflows/: build_and_test.yml  ci.yml  linting.yml  pip_install_test.yml  releasing.yml
docs/: requirements.txt
docs/source/: PyTASER_DFT_Example.ipynb  PyTASER_MP_Example.ipynb  changelog.rst  conf.py  contributing.rst  contributors.rst  dft_examples.nblink  examples.nblink  gaas_example.nblink  genindex.rst  index.rst  introduction.rst  jdos_examples.nblink  license.rst  mp_example.nblink  multiprocessing_examples.nblink  pytaser.rst
examples/: GaAs.ipynb  PyTASER_DFT_Example.ipynb  PyTASER_DFT_Multiprocessing_Example.ipynb  PyTASER_MP_Example.ipynb  PyTASER_example.ipynb
examples/BiOI/: BiOI.py  BiOI_ev.py
examples/Fe2O3/: Fe2O3.py  README.md
examples/GaAs/: GaAs.ipynb  GaAs.py  README.md  conc_xydata.json  temp_xydata.json
examples/TiO2/: vasprun.xml
examples/TiO2_anatase/: README.md  TiO2_anatase.py
examples/TiO2_rutile/: README.md  TiO2_rutile.py
paper/: paper.bib  paper.md
pytaser/: DASplotter.py  __init__.py  createinternalDas.py  das.py  das_generator.py  dasgenerator.py  generator.py  internal_abs_generator.py  kpoints.py  plotter.py  tas.py
tests/: conftest.py  test_generator.py  test_plotter.py
tests/data_cdte/: cdte_444_bs.json  cdte_444_dos.json  cdte_444_kweights.json
tests/data_gaas/: gaas_2534_dos.json  gaas_kweights.json  gaussian_123.json  new_gaas_2534_dos.json  tas_gaas.json
tests/data_sil/: cutoff_list.json  example_jdos_sil.json  max_abs_vals.yaml  (+8 more)
(+17 files in other folders)
